--- a/project-manager.html
+++ b/project-manager.html
@@ -44,11 +44,11 @@
 <p><span class="badge badge-light">Redmond, WA, USA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/cagents/c17bba43-07b7-4837-830f-9fde798dbe7d'>CAI - Project Manager/Director-Project Management Office</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cagents/c17bba43-07b7-4837-830f-9fde798dbe7d'>CAI - Project Manager/Director-Project Management Office</a></h5> 
 <p><span class="badge badge-light">Minneapolis, Minnesota</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qodaVfwq&k=Job&j=oi3tbfwJ&__jvst=Employee+Referral&__jvsd=sWJIKgwS&__jvsc=Twitter&bid=nfljqMwA'>Shift Digital Careers - Program Manager - Lead Management</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qodaVfwq&k=Job&j=oi3tbfwJ&__jvst=Employee+Referral&__jvsd=sWJIKgwS&__jvsc=Twitter&bid=nfljqMwA'>Shift Digital Careers - Program Manager - Lead Management</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -114,7 +114,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/reputation/56cbb736-c6f8-477c-959f-883d4bb4b0b3'>Reputation.com - Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/reputation/56cbb736-c6f8-477c-959f-883d4bb4b0b3'>Reputation.com - Program Manager</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -150,7 +150,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/ywghpymqsddyfkggtcymwkkwsy'>IT Project Manager | JFR Staffing</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/ywghpymqsddyfkggtcymwkkwsy'>IT Project Manager | JFR Staffing</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -158,11 +158,11 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Chicago, Illinois  Chicago</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/goldenstatewarriors/jobs/1942164'>Job Application for Marketing Project Manager, Esports at GSW Sports, LLC</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/goldenstatewarriors/jobs/1942164'>Job Application for Marketing Project Manager, Esports at GSW Sports, LLC</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/rationalconsulting/jobs/4503246002'>Job Application for Blog Project Manager at Rational</a></h5> 
+<h5><a href='https://boards.greenhouse.io/rationalconsulting/jobs/4503246002'>Job Application for Blog Project Manager at Rational</a></h5> 
 <p><span class="badge badge-light">Bellevue</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -202,7 +202,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='http://watershedsecurity.applytojob.com/apply/cJCqqWywkF/IT-Project-Manager'>IT Project Manager - Watershed Security - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://watershedsecurity.applytojob.com/apply/cJCqqWywkF/IT-Project-Manager'>IT Project Manager - Watershed Security - Career Page</a></h5> 
 <p><span class="badge badge-light">Fairfax, VA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -226,7 +226,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://hire.withgoogle.com/public/jobs/polsourcecom/view/P_AAAAAAIAACzJAsYbTb2LPm'>Program Manager job in San Francisco, CA at PolSource</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hire.withgoogle.com/public/jobs/polsourcecom/view/P_AAAAAAIAACzJAsYbTb2LPm'>Program Manager job in San Francisco, CA at PolSource</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA San Francisco, CA, USA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -242,7 +242,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Denver, Colorado  New York, New York  Scottsdale, Arizona</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oah8afwt&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=nOzXpMw0'>ServiceNow Careers - Senior Learning Program Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oah8afwt&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=nOzXpMw0'>ServiceNow Careers - Senior Learning Program Manager</a></h5> 
 <p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -250,7 +250,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://4re.referrals.selectminds.com/jobs/project-manager-i-27588'>Project Manager I - RELX Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/project-manager-i-27588'>Project Manager I - RELX Careers</a></h5> 
 <p><span class="badge badge-light">United States  Alpharetta, GA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -258,7 +258,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CityofPhiladelphia/743999698601255-continuum-of-care-program-manager-for-underrepresented-populations'>City of Philadelphia Continuum of Care Program Manager for Underrepresented Populations | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CityofPhiladelphia/743999698601255-continuum-of-care-program-manager-for-underrepresented-populations'>City of Philadelphia Continuum of Care Program Manager for Underrepresented Populations | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -300,7 +300,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Canada  North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GoodwillIndustriesOfNorthernNewEngland/743999698590071-goodclean-project-manager-i'>Goodwill Industries of Northern New England GoodClean Project Manager I | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/GoodwillIndustriesOfNorthernNewEngland/743999698590071-goodclean-project-manager-i'>Goodwill Industries of Northern New England GoodClean Project Manager I | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -350,7 +350,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698582038-strategic-project-manager-to-ceo-m-f-d-'>Omio Strategic Project Manager to CEO (m / f / d) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698582038-strategic-project-manager-to-ceo-m-f-d-'>Omio Strategic Project Manager to CEO (m / f / d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -418,7 +418,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698567797-rexroth-project-manager-bluesky'>Bosch Group Rexroth ? Project manager - BlueSky | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698567797-rexroth-project-manager-bluesky'>Bosch Group Rexroth ? Project manager - BlueSky | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
